added meta description

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <meta name="google-site-verification" content="aOtNK4CmIYOsgZBcFxLTBDEOaLPx6-Vf5g-LkMw1G-M" />
+    <meta name="description" content="Gold Orbit is a Space Manufacturing company building shields for small spacecraft">
+<meta name="keywords" content="Space, Rockets, Launch, Satellites, Space Shield, Debris Shielding, Space Merch, Gold Orbit">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
